Fix scrollbar in raster layer form

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -22,6 +22,7 @@ body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  overflow-y: hidden;
 }
 
 .App {
@@ -31,6 +32,7 @@ body {
   /* min-height: 100vh; */
   flex-direction: column;
   font-family: Montserrat;
+  overflow-y: auto;
 }
 
 .AppContent {
